--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: jerray/publish-docker-action@v1.0.3
+      - uses: docker/login-action@v1
         with:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          registry: ghcr.io
-          repository: 'bidmcdigitalpsychiatry/lamp-ide'
-          auto_tag: true
+      - uses: docker/build-push-action@v2
+        with:
+          context: vscode
+          push: true
+          tags: ghcr.io/bidmcdigitalpsychiatry/lamp-ide:vscode
+      - uses: docker/build-push-action@v2
+        with:
+          context: jupyter
+          push: true
+          tags: ghcr.io/bidmcdigitalpsychiatry/lamp-ide:jupyter
