--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -21,6 +21,8 @@ RUN sudo apt-get update -y && sudo apt-get install -y jq ripgrep pandoc mongodb-
     pip install geopy && \
     pip install similaritymeasures && \
     pip install fastdtw && \
+    pip install altair && \
+    pip install compress_pickle && \
     pip install bash_kernel && python3 -m bash_kernel.install && \
     npm install -g tslab && tslab install && \
 
